<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.netodologia.myapplication.MainActivity">

    <item
        android:id="@+id/action_check_box"
        android:orderInCategory="100"
        android:title="@string/checkBox"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_save_notes"
        android:orderInCategory="100"
        android:title="@string/saveNote"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_spinner"
        android:orderInCategory="100"
        android:title="@string/spinner"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calendar_view"
        android:orderInCategory="100"
        android:title="@string/calendarView"
        app:showAsAction="never" />
</menu>