<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalendarActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        tools:context=".CalendarActivity">

        <Button
            android:id="@+id/chooseStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#A0DBE3"
            android:gravity="left|center_vertical"
            android:text="@string/chooseStartDate"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/chooseEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#A0DBE3"
            android:gravity="left|center_vertical"
            android:text="@string/chooseEndDate"
            tools:ignore="RtlHardcoded" />

        <CalendarView
            android:id="@+id/startDateCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#FFFFFF"
            android:backgroundTint="#FFFFFF"
            android:foregroundTint="#3F51B5" />

        <CalendarView
            android:id="@+id/endtDateCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#D1ECF8" />

        <Button
            android:id="@+id/buttonOK"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:backgroundTint="#A0DBE3"
            android:foregroundTint="#00BCD4"
            android:text="@string/buttonOK" />


    </LinearLayout>
</FrameLayout>